testbed/test/cruise/compiler/expected/Main2.txt
Main2.ump:6: error: incompatible types: String cannot be converted to int
    int a = "not an int";
            ^
1 error
